--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <title>Bike Store</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="scripts/app.js"></script>
 </head>
 
-<body>
+<body ng-app="bikeStore">
     Bike Store.. Coming Soon...
 </body>
 
