Added code to retrieve products - from external JSON datasource

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 
 <body ng-app="bikeStore">
+
     Bike Store.. Coming Soon...
+    <br/>
+    <br/>
+    
+    <div ng-controller="prodList">
+        {{products}}
+    </div>
+
 </body>
 
 </html>
