--- a/Tests/RunTests.html
+++ b/Tests/RunTests.html
@@ -15,10 +15,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-mocks.js"></script>
 
   <!-- include source files here... -->
-  
+  <script src="../site/scripts/app.js"></script>
   
   <!-- include spec files here... -->
-  
+  <script src="prodListSpec.js"></script>
   
 </head>
 
