--- a/Site/index.html
+++ b/Site/index.html
@@ -13,7 +13,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 
     <script src="scripts/app.js"></script>
-    <link href="resources/prodlst.css" rel="stylesheet">
 </head>
 
 <body ng-app="bikeStore" class="container-fluid">
@@ -38,9 +37,8 @@
                     {{p.description}}
                 </div>
                 <div class="panel-footer">
-                    Class:&nbsp;
-                    <span ng-repeat="c in p.class" class="capitalise">
-                        {{c}}<span ng-show="{true: '', false: ', '}[$last]">,</span>
+                    <span ng-repeat="c in p.class">
+                        {{c}}
                     </span>
                 </div>
             </div>
