--- a/Site/index.html
+++ b/Site/index.html
@@ -13,6 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 
     <script src="scripts/app.js"></script>
+    <link href="resources/prodList.css" rel="stylesheet">
 </head>
 
 <body ng-app="bikeStore" class="container-fluid">
