Added style to capitalise

--- a/Site/index.html
+++ b/Site/index.html
@@ -38,7 +38,7 @@
                     {{p.description}}
                 </div>
                 <div class="panel-footer">
-                    <span ng-repeat="c in p.class">
+                    <span ng-repeat="c in p.class" class="capitalise">
                         {{c}}
                     </span>
                 </div>
