--- a/Site/index.html
+++ b/Site/index.html
@@ -38,8 +38,9 @@
                     {{p.description}}
                 </div>
                 <div class="panel-footer">
+                    Class:&nbsp;
                     <span ng-repeat="c in p.class" class="capitalise">
-                        {{c}}
+                        {{c}}<span ng-show="{true: '', false: ', '}[$last]">,</span>
                     </span>
                 </div>
             </div>
