--- a/Site/index.html
+++ b/Site/index.html
@@ -48,7 +48,7 @@
 
         <!-- products -->
         <div class="col-md-10 prodList">
-            <div ng-repeat="p in products" class="col-sm-4">
+            <div ng-repeat="p in filteredProducts" class="col-sm-4">
                 <div class="panel panel-primary prod">
 
                     <div class="panel-heading">{{p.name}}</div>
