--- a/app/index.html
+++ b/app/index.html
@@ -6,11 +6,12 @@
     <title>Bike Store</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
 
     <script src="scripts/app.js"></script>
     <link href="resources/prodList.css" rel="stylesheet">
@@ -30,9 +31,9 @@
         <!-- filters -->
         <div class="col-md-2">
             <div class="panel panel-default">
-                
+
                 <div class="panel-heading">Filter By:</div>
-                
+
                 <div ng-repeat="attr in attributesToFilter" class="panel-body">
                     <h4 class="capitalise">{{dfts}}</h4>
 
