--- a/app/test/index.html
+++ b/app/test/index.html
@@ -11,15 +11,15 @@
   <script src="jasmine-standalone-2/lib/jasmine-2.4.1/jasmine-html.js"></script>
   <script src="jasmine-standalone-2/lib/jasmine-2.4.1/boot.js"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-mocks.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-mocks.js"></script>
 
   <!-- include source files here... -->
-  <script src="../site/scripts/app.js"></script>
-  
+  <script src="../scripts/app.js"></script>
+
   <!-- include spec files here... -->
   <script src="prodListSpec.js"></script>
-  
+
 </head>
 
 <body>
